fix stretched collection images

--- a/src/styles/modules/product-grid.scss
+++ b/src/styles/modules/product-grid.scss
@@ -68,6 +68,7 @@
   img {
     max-width: none;
     min-height: 100%;
+    height: 100%;
     width: auto;
   }
 }
